--- a/data/build.gradle
+++ b/data/build.gradle
@@ -10,6 +10,8 @@ buildscript {
 apply plugin: 'com.android.library'
 apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'realm-android'
+
 
 android {
     defaultPublishConfig "debug"
@@ -59,6 +61,8 @@ dependencies {
     compile dataDependencies.rxJava
     compile dataDependencies.rxAndroid
     compile dataDependencies.androidAnnotations
+    compile dataDependencies.jobQueue
+    compile dataDependencies.retrofit
 
     testCompile testDependencies.junit
     testCompile testDependencies.assertj
