--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -26,6 +26,11 @@ ext {
   arrowVersion = '1.0.0'
   jobQueueVersion = '2.0.1'
   retrofitVersion = '2.2.0'
+  lombokVersion = '1.12.6'
+  saripaarVersion = '2.0.3'
+  autoValuesVersion = '1.2'
+  retrofitRxAdapterVersion = '2.2.0'
+  retrofitGsonConverterVersion ='2.0.0'
 
   //Testing
   robolectricVersion = '3.1.1'
@@ -40,14 +45,18 @@ ext {
   leakCanaryVersion = '1.3.1'
 
   presentationDependencies = [
-      daggerCompiler:     "com.google.dagger:dagger-compiler:${daggerVersion}",
-      dagger:             "com.google.dagger:dagger:${daggerVersion}",
-      butterKnife:        "com.jakewharton:butterknife:${butterKnifeVersion}",
-      recyclerView:       "com.android.support:recyclerview-v7:${recyclerViewVersion}",
-      rxJava:             "io.reactivex.rxjava2:rxjava:${rxJavaVersion}",
-      rxAndroid:          "io.reactivex.rxjava2:rxandroid:${rxAndroidVersion}",
-      javaxAnnotation:    "javax.annotation:jsr250-api:${javaxAnnotationVersion}",
-      appCompat:          "com.android.support:appcompat-v7:${appCompatVersion}"
+      daggerCompiler:         "com.google.dagger:dagger-compiler:${daggerVersion}",
+      dagger:                 "com.google.dagger:dagger:${daggerVersion}",
+      butterKnife:            "com.jakewharton:butterknife:${butterKnifeVersion}",
+      recyclerView:           "com.android.support:recyclerview-v7:${recyclerViewVersion}",
+      rxJava:                 "io.reactivex.rxjava2:rxjava:${rxJavaVersion}",
+      rxAndroid:              "io.reactivex.rxjava2:rxandroid:${rxAndroidVersion}",
+      javaxAnnotation:        "javax.annotation:jsr250-api:${javaxAnnotationVersion}",
+      appCompat:              "com.android.support:appcompat-v7:${appCompatVersion}",
+      saripaar:               "com.mobsandgeeks:android-saripaar:${saripaarVersion}",
+      lombok:                 "org.projectlombok:lombok:${lombokVersion}",
+      retrofitRxAdapter:      "com.squareup.retrofit2:adapter-rxjava2:${retrofitRxAdapterVersion}",
+      retrofitGsonConverter:  "com.squareup.retrofit2:converter-gson:${retrofitGsonConverterVersion}",
   ]
 
   presentationTestDependencies = [
@@ -62,7 +71,9 @@ ext {
       javaxAnnotation:    "javax.annotation:jsr250-api:${javaxAnnotationVersion}",
       javaxInject:        "javax.inject:javax.inject:${javaxInjectVersion}",
       rxJava:             "io.reactivex.rxjava2:rxjava:${rxJavaVersion}",
-      arrow:              "com.fernandocejas:arrow:${arrowVersion}"
+      arrow:              "com.fernandocejas:arrow:${arrowVersion}",
+      lombok:             "org.projectlombok:lombok:${lombokVersion}",
+      autoValues:         "apt 'com.google.auto.value:auto-value:${autoValuesVersion}"
   ]
 
   domainTestDependencies = [
@@ -82,7 +93,8 @@ ext {
       javaxInject:        "javax.inject:javax.inject:${javaxInjectVersion}",
       androidAnnotations: "com.android.support:support-annotations:${androidAnnotationsVersion}",
       jobQueue:           "com.birbit:android-priority-jobqueue:${jobQueueVersion}",
-      retrofit:           "com.squareup.retrofit2:retrofit:${retrofitVersion}"
+      retrofit:           "com.squareup.retrofit2:retrofit:${retrofitVersion}",
+      lombok:             "org.projectlombok:lombok:${lombokVersion}"
   ]
 
   dataTestDependencies = [
