--- a/data/build.gradle
+++ b/data/build.gradle
@@ -8,9 +8,9 @@ buildscript {
 }
 
 apply plugin: 'com.android.library'
+apply plugin: 'realm-android'
 apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'me.tatarka.retrolambda'
-apply plugin: 'realm-android'
 
 
 android {
@@ -64,8 +64,15 @@ dependencies {
     compile dataDependencies.jobQueue
     compile dataDependencies.retrofit
 
+    provided dataDependencies.lombok
+
+    apt dataDependencies.lombok
+
     testCompile testDependencies.junit
     testCompile testDependencies.assertj
     testCompile testDependencies.mockito
     testCompile testDependencies.robolectric
+
+    androidTestCompile testDependencies.junit
+    androidTestCompile 'com.android.support.test:testing-support-lib:0.1'
 }
