--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -31,6 +31,7 @@ ext {
   autoValuesVersion = '1.2'
   retrofitRxAdapterVersion = '2.2.0'
   retrofitGsonConverterVersion ='2.0.0'
+  eventBusVersion = '3.0.0'
 
   //Testing
   robolectricVersion = '3.1.1'
@@ -57,6 +58,7 @@ ext {
       lombok:                 "org.projectlombok:lombok:${lombokVersion}",
       retrofitRxAdapter:      "com.squareup.retrofit2:adapter-rxjava2:${retrofitRxAdapterVersion}",
       retrofitGsonConverter:  "com.squareup.retrofit2:converter-gson:${retrofitGsonConverterVersion}",
+      eventBus:               "org.greenrobot:eventbus:${eventBusVersion}"
   ]
 
   presentationTestDependencies = [
@@ -94,7 +96,8 @@ ext {
       androidAnnotations: "com.android.support:support-annotations:${androidAnnotationsVersion}",
       jobQueue:           "com.birbit:android-priority-jobqueue:${jobQueueVersion}",
       retrofit:           "com.squareup.retrofit2:retrofit:${retrofitVersion}",
-      lombok:             "org.projectlombok:lombok:${lombokVersion}"
+      lombok:             "org.projectlombok:lombok:${lombokVersion}",
+      eventBus:           "org.greenrobot:eventbus:${eventBusVersion}"
   ]
 
   dataTestDependencies = [
