--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -32,6 +32,8 @@ ext {
   retrofitRxAdapterVersion = '2.2.0'
   retrofitGsonConverterVersion ='2.0.0'
   eventBusVersion = '3.0.0'
+  glideVersion = '3.7.0'
+  androidV4Version = '19.1.0'
 
   //Testing
   robolectricVersion = '3.1.1'
@@ -58,7 +60,9 @@ ext {
       lombok:                 "org.projectlombok:lombok:${lombokVersion}",
       retrofitRxAdapter:      "com.squareup.retrofit2:adapter-rxjava2:${retrofitRxAdapterVersion}",
       retrofitGsonConverter:  "com.squareup.retrofit2:converter-gson:${retrofitGsonConverterVersion}",
-      eventBus:               "org.greenrobot:eventbus:${eventBusVersion}"
+      eventBus:               "org.greenrobot:eventbus:${eventBusVersion}",
+      glide:                  "com.github.bumptech.glide:glide:${glideVersion}",
+      androidV4:              "com.android.support:support-v4:${androidV4Version}"
   ]
 
   presentationTestDependencies = [
