feat: add features that implements a user's list with users saved in cache

--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -19,8 +19,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".features.users.UserDetailsActivity">
-        </activity>
+        <activity android:name=".features.users.details.UserDetailsActivity" />
+        <activity android:name=".features.users.list.UserListActivity" />
+
     </application>
 
 </manifest>
