feat: add tests to domain's layer

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -53,7 +53,7 @@ dependencies {
     def dataDependencies = rootProject.ext.dataDependencies
     def testDependencies = rootProject.ext.dataTestDependencies
 
-    compile project(':domain2')
+    compile project(':domain')
     provided dataDependencies.javaxAnnotation
     compile dataDependencies.javaxInject
     compile dataDependencies.okHttp
