#fix: change url omdb

--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".features.users.details.UserDetailsActivity" />
+        <activity android:name=".features.movie.MovieDetailsActivity" />
         <activity android:name=".features.users.list.UserListActivity" />
 
     </application>
