--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -35,6 +35,7 @@ ext {
   glideVersion = '3.7.0'
   androidV4Version = '19.1.0'
   okHttpVersion3 = '3.9.1'
+  jsoupVersion = '1.9.2'
 
   //Testing
   robolectricVersion = '3.1.1'
@@ -103,7 +104,8 @@ ext {
       eventBus:           "org.greenrobot:eventbus:${eventBusVersion}",
       retrofitRxAdapter:      "com.squareup.retrofit2:adapter-rxjava2:${retrofitRxAdapterVersion}",
       retrofitGsonConverter:  "com.squareup.retrofit2:converter-gson:${retrofitGsonConverterVersion}",
-      okHttp3:                 "com.squareup.okhttp3:okhttp:${okHttpVersion3}"
+      okHttp3:                 "com.squareup.okhttp3:okhttp:${okHttpVersion3}",
+      jsoup :                  "org.jsoup:jsoup:${jsoupVersion}"
 
   ]
 
